[gd_scene load_steps=7 format=3 uid="uid://c4pkuhd8g0tta"]

[ext_resource type="Script" uid="uid://co7hggd032x1p" path="res://scripts/common/planet_btn.gd" id="1_1eo85"]
[ext_resource type="Theme" uid="uid://db287luf12nub" path="res://shaders/reset_btn_theme.tres" id="1_r6p0i"]
[ext_resource type="Texture2D" uid="uid://oso7ton63asi" path="res://assets/netuno/netuno.png" id="2_f6fok"]
[ext_resource type="Shader" uid="uid://b2yiekmcwhx4r" path="res://shaders/glow.gdshader" id="4_4mxoy"]
[ext_resource type="Theme" uid="uid://col8eqmnmim6d" path="res://shaders/planet_btn.tres" id="6_nyofi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1eo85"]
shader = ExtResource("4_4mxoy")
shader_parameter/glow_color = Color(1, 0.85, 0.3, 1)
shader_parameter/blur_strength = 0.5

[node name="planet_btn" type="Node2D"]
script = ExtResource("1_1eo85")
planet_name = "NETUNO"

[node name="btn" type="Button" parent="."]
offset_left = -68.0
offset_top = -68.0
offset_right = 68.0
offset_bottom = 68.0
theme = ExtResource("1_r6p0i")

[node name="sprite" type="Sprite2D" parent="btn"]
position = Vector2(68, 68)
texture = ExtResource("2_f6fok")

[node name="selection_glow" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_1eo85")

[node name="planet_name" type="Label" parent="."]
offset_left = -68.0
offset_top = 88.0
offset_right = 68.0
offset_bottom = 111.0
theme = ExtResource("6_nyofi")
text = "NETUNO"
horizontal_alignment = 1

[connection signal="mouse_entered" from="btn" to="." method="_on_btn_mouse_entered"]
[connection signal="mouse_exited" from="btn" to="." method="_on_btn_mouse_exited"]
[connection signal="pressed" from="btn" to="." method="_on_btn_pressed"]
